Fixed horizontal scrollbar on drawer

--- a/directory/src/components/Drawer/NestedList.scss
+++ b/directory/src/components/Drawer/NestedList.scss
@@ -19,7 +19,7 @@
         color: black;
 
         .list-item {
-            width: 100%;
+            // width: 100%;
     
             display: flex;
             flex-direction: row;
@@ -51,7 +51,7 @@
     }
 
     .nested-list-item {
-        width: 100%;
+        // width: 100%;
 
         display: flex;
         flex-direction: row;
